update name in docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   rproxy:
-    image: pretorh/https-rproxy
+    image: pretorh/https-reverse-proxy
     ports:
       - 80:80
       - 433:433
