ci: split building docker with hash and latest tags
build hash in build job, and re tag this in deploy_latest (explicitly on
master only)

--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -22,5 +22,22 @@ jobs:
       uses: docker/build-push-action@v2.7.0
       with:
         push: true
-        tags: pretorh/https-reverse-proxy:latest,pretorh/https-reverse-proxy:${{ github.sha }}
+        tags: pretorh/https-reverse-proxy:${{ github.sha }}
 
+  deploy_latest:
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/master'
+    steps:
+
+    - name: Docker Login
+      uses: docker/login-action@v1.10.0
+      with:
+        username: pretorh
+        password: ${{ secrets.DOCKER_API_KEY }}
+
+    - name: Build and push Docker images
+      uses: docker/build-push-action@v2.7.0
+      with:
+        push: true
+        tags: pretorh/https-reverse-proxy:latest
+        cache-from: type=registry,ref=pretorh/https-reverse-proxy:${{ github.sha }}
