--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,9 @@ services:
     ports:
       - 80:80
       - 433:433
+    environment:
+      - CRON_DAY=SUN
+      - CRON_HOUR=4
     volumes:
       - ./.private:/opt/rproxy/private
       - ./sites:/etc/nginx/conf.d/sites/
