--- a/examples/sites/combined.conf
+++ b/examples/sites/combined.conf
@@ -1,12 +1,12 @@
 server {
   listen 443 ssl http2;
   listen [::]:443 ssl http2;
-  server_name simple.domain1.example.com;
+  server_name combined.domain1.example.com;
 
   # load ssl certificates and setup parameters
   # note these need to exist already when nginx starts up
-  ssl_certificate /etc/ssl/acme/simple.domain1.example.com/fullchain.pem;
-  ssl_certificate_key /etc/ssl/acme/simple.private/domain1.example.com/privkey.pem;
+  ssl_certificate /etc/ssl/acme/combined.domain1.example.com/fullchain.pem;
+  ssl_certificate_key /etc/ssl/acme/combined.private/domain1.example.com/privkey.pem;
   include /etc/nginx/includes/ssl-params.inc;
 
   # proxy all "api" requests to the `web` service (in `docker-compose.yml`) on port 8080
