docs: fix typos in examples
fix https port, fix path to private key in site config

--- a/examples/sites/combined.conf
+++ b/examples/sites/combined.conf
@@ -6,7 +6,7 @@ server {
   # load ssl certificates and setup parameters
   # note these need to exist already when nginx starts up
   ssl_certificate /etc/ssl/acme/combined.domain1.example.com/fullchain.pem;
-  ssl_certificate_key /etc/ssl/acme/combined.private/domain1.example.com/privkey.pem;
+  ssl_certificate_key /etc/ssl/acme/private/combined.domain1.example.com/privkey.pem;
   include /etc/nginx/includes/ssl-params.inc;
 
   # proxy all "api" requests to the `web` service (in `docker-compose.yml`) on port 8080
