--- a/examples/sites/combined.conf
+++ b/examples/sites/combined.conf
@@ -7,7 +7,7 @@ server {
   # note these need to exist already when nginx starts up
   ssl_certificate /etc/ssl/acme/combined.domain1.example.com/fullchain.pem;
   ssl_certificate_key /etc/ssl/acme/private/combined.domain1.example.com/privkey.pem;
-  include /etc/nginx/includes/ssl-params.inc;
+  # research before using/cherry-pick from: include /etc/nginx/includes/ssl-params.inc;
 
   # proxy all "api" requests to the `web` service (in `docker-compose.yml`) on port 8080
   location /api {
