--- a/examples/sites/simple.conf
+++ b/examples/sites/simple.conf
@@ -7,7 +7,7 @@ server {
   # note these need to exist already when nginx starts up
   ssl_certificate /etc/ssl/acme/simple.domain1.example.com/fullchain.pem;
   ssl_certificate_key /etc/ssl/acme/private/simple.domain1.example.com/privkey.pem;
-  include /etc/nginx/includes/ssl-params.inc;
+  # research before using/cherry-pick from: include /etc/nginx/includes/ssl-params.inc;
 
   location / {
     root /usr/share/nginx/html/simple;
