change location of private key files (breaking change)
move and rename private key files from
`/etc/ssl/acme/private/$domain/privkey.pem` ->
`/etc/ssl/acme/$domain/private-key.pem`

--- a/examples/sites/combined.conf
+++ b/examples/sites/combined.conf
@@ -6,7 +6,7 @@ server {
   # load ssl certificates and setup parameters
   # note these need to exist already when nginx starts up
   ssl_certificate /etc/ssl/acme/combined.domain1.example.com/fullchain.pem;
-  ssl_certificate_key /etc/ssl/acme/private/combined.domain1.example.com/privkey.pem;
+  ssl_certificate_key /etc/ssl/acme/combined.domain1.example.com/private-key.pem;
   # research before using/cherry-pick from: include /etc/nginx/includes/ssl-params.inc;
 
   # proxy all "api" requests to the `web` service (in `docker-compose.yml`) on port 8080
