--- a/examples/sites/simple.conf
+++ b/examples/sites/simple.conf
@@ -6,7 +6,7 @@ server {
   # load ssl certificates and setup parameters
   # note these need to exist already when nginx starts up
   ssl_certificate /etc/ssl/acme/simple.domain1.example.com/fullchain.pem;
-  ssl_certificate_key /etc/ssl/acme/private/simple.domain1.example.com/privkey.pem;
+  ssl_certificate_key /etc/ssl/acme/simple.domain1.example.com/private-key.pem;
   # research before using/cherry-pick from: include /etc/nginx/includes/ssl-params.inc;
 
   location / {
